--- a/[CP] EndfieldMusicPack/manifest.json
+++ b/[CP] EndfieldMusicPack/manifest.json
@@ -4,8 +4,9 @@
     "Version": "1.0.0",
     "Description": "Replacing several songs with Arknights:Endfield music.",
     "UniqueID": "Rosmontis220.EndfieldMusicPack",
-	"UpdateKeys": [ "GitHub:Rosmontis220/StardewValleyIV" ]
+	"UpdateKeys": [ "GitHub:Rosmontis220/StardewValleyIV" ],
     "ContentPackFor": {
         "UniqueID": "Pathoschild.ContentPatcher"
     }
 }
+
